Fix spacing for ListItems

--- a/src/components/ExplorePage/ExplorePage.scss
+++ b/src/components/ExplorePage/ExplorePage.scss
@@ -11,8 +11,6 @@
   width: 375px;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   margin: 2em 0;
-  box-sizing: border-box;
-  padding: 0 1em;
 }
 
 .search-term {
